Fix signup form visibility

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -309,3 +309,6 @@ form button[type="submit"]:hover,
 form button:hover {
   background-color: #e6e6e6;
 }
+body {
+  outline: 4px solid magenta !important;
+}
